cluster/apps_legacy/gollum/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gollum
  name: gollum
spec:
  selector:
    matchLabels:
      app: gollum
  replicas: 1
  template:
    metadata:
      labels:
        app: gollum
    spec:
      containers:
      - name: gollum
        image: tdeutsch/gollum-small:20210830141833

        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 200Mi
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /wiki
          name: gollum-data
        livenessProbe:
          httpGet:
            path: /Home
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        startupProbe:
          httpGet:
            path: /Home
            port: 8080
          failureThreshold: 30
          periodSeconds: 10
      volumes:
      - name: gollum-data
        persistentVolumeClaim:
          claimName: gollum-data
