cluster/apps_legacy/gollum/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: gollum
  labels:
    app: gollum
  name: gollum
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-realm: traefik
    ingress.kubernetes.io/auth-secret: gollum-basic-auth
    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_TARGET_SKY}"
    traefik.ingress.kubernetes.io/router.middlewares: identity-forward-auth@kubernetescrd
spec:
  tls:
    - secretName: wiki2-tls
      hosts:
        - wiki2.${SECRET_DOMAIN_ME}
  rules:
    - host: wiki2.${SECRET_DOMAIN_ME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gollum
                port:
                  number: 8080
